# latin-words

./: ADDONS.LAT  HOWTO  INFLECTS.LAT  INSTALLATION.adoc  LICENSE  MEANINGS.ADB  Makefile.in  README.adoc  STEMLIST.GEN  UNIQUES.LAT  configure  configure.ac  developer_parameters.ads  dictionary_package.ads  english_support_package.ads  inflections_package.adb  inflections_package.ads  latin_debug.adb  latin_debug.ads  list_package.adb  list_sweep.adb  makedict.adb  makeewds.adb  makeinfl.adb  makestem.adb  newline.adb  parse.adb  put_example_line.adb  search_english.adb  tricks_package.adb  uniques_package.ads  wakedict.adb  websiteHistory.txt  weed.adb  weed_all.adb  word_package.adb  word_parameters.adb  word_parameters.ads  word_support_package.adb  words.adb  (+3 more)
LICENSES/: FSFAP
scripts/: cpfix.sh  make_ebuild.sh  prog_script.sh  version_patch.sh
tools/: check.adb  dictpage.adb  linewhit.adb  page2htm.adb  uniqpage.adb
web/: 197edwin.exe.placeholder  197fcwin.exe.placeholder  197fwin.exe.placeholder  dict195a.exe.placeholder  dictpage.htm  disk1197.exe.placeholder  disk1w95.exe.placeholder  disk2197.exe.placeholder  disk2w95.exe.placeholder  dk1dos.exe.placeholder  dk2dos.exe.placeholder  freq.htm  freqappx.htm  freqbibl.htm  freqrec.htm  freqvita.htm  freqvoc.htm  p1446.htm  prog195a.exe.placeholder  readme.lux  word194w.exe.placeholder  word195w.exe.placeholder  words.htm  wordsdev.htm  wordsdoc.htm  wordsdos.htm  wordslux.htm  wordsmac.htm  wordsos2.htm  wordsoth.htm  wordsw95.htm  wordswin.htm
wordsall/: 1000.  ADDONS.  ADDONS.LAT  DICTLINE.GEN  INFLECTS.  INFLECTS.LAT  STEMLIST.GEN  TEST500.  UNIQUES.  UNIQUES.LAT  UNKNOWNS.ADB  WORDSDEV.HTM  WORDSDOC.HTM  addons_package.adb  addons_package.ads  config.ads  developer_parameters.adb  developer_parameters.ads  dictionary_form.adb  dictionary_package.adb  dictionary_package.ads  english_support_package.adb  inflections_package.adb  inflections_package.ads  latin_file_names.ads  line_stuff.adb  line_stuff.ads  list_list.adb  list_package.adb  list_package.ads  makedict.adb  makeefil.adb  makeinfl.adb  makestem.adb  meanings.adb  parse.adb  put_example_line.adb  strings_package.adb  strings_package.ads  tricks_package.adb  (+11 more)
